<resources>
    <string name="app_name">Invisible Hand</string>
    <string name="submit_text">Submit</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="enter_your_email_id">Enter your email-id</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="login_with_gmail">LogIn with Gmail</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="edit_mobile_number">edit mobile number</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="otp">OTP</string>

    <string name="btn_call_for_help">Call Help</string>
    <string name="btn_locate_victim">Locate Victim</string>
    <string name="title_activity_locate_victim">LocateVictim</string>
    <string name="looking_for_help">Looking for help</string>
    <string name="no_absolute_victim_no_absolute_helper">No Absolute Victim, No Absolute Helper.</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email-Id</string>
    <string name="mobile_number">Mobile Number</string>
</resources>
